Bug 448396 - kcmshell5 --list is missing most modules
Summary: kcmshell5 --list is missing most modules
Status: RESOLVED FIXED
Alias: None
Product: kde-cli-tools
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-13 20:58 UTC by Antonio Rojas
Modified: 2022-01-17 21:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-01-13 20:58:32 UTC
After updating to 5.24 beta, 'kcmshell5 --list' fails to list most of the available KCMs. It still opens them fine if you remember their name.
Comment 1 Bug Janitor Service 2022-01-15 16:10:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-cli-tools/-/merge_requests/30
Comment 2 Alexander Lohnau 2022-01-17 18:31:32 UTC
Git commit 8939a7cea3335d6df50139122f45bc085c40889d by Alexander Lohnau.
Committed on 15/01/2022 at 16:09.
Pushed by alex into branch 'master'.

kcmshell: List KCMs that are queried without KServiceTypeTrader

M  +11   -6    kcmshell/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/8939a7cea3335d6df50139122f45bc085c40889d
Comment 3 Alexander Lohnau 2022-01-17 18:32:21 UTC
Git commit 3d649e88fe754da64424d8978b90368597d687a1 by Alexander Lohnau.
Committed on 17/01/2022 at 18:32.
Pushed by alex into branch 'Plasma/5.24'.

kcmshell: List KCMs that are queried without KServiceTypeTrader


(cherry picked from commit 8939a7cea3335d6df50139122f45bc085c40889d)

M  +11   -6    kcmshell/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/3d649e88fe754da64424d8978b90368597d687a1