kcmshell: List KCMs that are queried without KServiceTypeTrader

BUG: 448396


(cherry picked from commit 8939a7cea3335d6df50139122f45bc085c40889d)